--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
   },
   "engines": {
     "npm": "please-use-yarn",
-    "yarn": "^1.22.19",
-    "node": "^18.12.1"
+    "yarn": "^1.22.19"
   }
 }
